# markdownaccess

./: .gitignore  CLAUDE.md  README.md  main.py  markdownaccess.spec  pyproject.toml  requirements.txt  test_nvda.py  test_webview.py
app/: version.py
app/core/: announce.py  app_info.py  document.py  error_reporter.py  i18n.py  logger.py  markdown_actions.py  outline.py  renderer.py  search.py  settings.py  speech.py  updater.py
app/ui/: announcement_dialog.py  contact_dialog.py  error_report_dialog.py  find_dialog.py  link_dialog.py  main_window.py  preferences_dialog.py  table_dialog.py  update_dialog.py
installer/: markdownaccess.iss
